<resources>
    <string name="app_name">FilosofiaQuiz</string>
    <string name="philosophy_quiz">philosophy quiz</string>
    <string name="wise">How wise are you?</string>
    <string name="how_wise_are_you">How wise are you?</string>
    <string name="type_your_name_here">Type your name here</string>
    <string name="let_s_go">Let\'s go!</string>
    <string name="question_3">3. What philosopher said: \'Whatever doesn\'t kill you simply makes you stronger\'?</string>
    <string name="friedrich_nietzsche">Friedrich Nietzsche</string>
    <string name="martin_heidegger">Martin Heidegger</string>
    <string name="karl_marx">Karl Marx</string>
    <string name="question_2">2. What does Philosophy mean (from the Greek term - philosophía)?</string>
    <string name="love_of_nature">love of nature</string>
    <string name="love_of_wisdom">love of wisdom</string>
    <string name="a_lover_is_wise">a lover is wise</string>
    <string name="it_is_wise_to_love">it is wise to love</string>
    <string name="question_1">1. Who wrote \'The Belgian Massacres\'?</string>
    <string name="type_your_response_here">Type your response here</string>
    <string name="question_4">4. Heidegger investigates the question of Being in which book?</string>
    <string name="introduction_to_metaphysics">Introduction to Metaphysics</string>
    <string name="being_and_time">Being and Time</string>
    <string name="black_notebooks">Black Notebooks</string>
    <string name="on_the_way_to_language">On the Way to Language</string>
    <string name="question_5">5. What does \'dasein\' mean in Heidegger\'s philosophy?</string>
    <string name="belief">belief</string>
    <string name="art">art</string>
    <string name="existence">existence</string>
    <string name="choice">choice</string>
    <string name="question_6">6. Who wrote \'The Virtue of Selfishness\'?</string>
    <string name="hannah_arendt">Hannah Arendt</string>
    <string name="mary_midgley">Mary Midgley</string>
    <string name="susan_haack">Susan Haack</string>
    <string name="ayn_rand">Ayn Rand</string>
    <string name="question_7">7. What does mimesis refers to?</string>
    <string name="imitation">imitation</string>
    <string name="representation">representation</string>
    <string name="mimicry">mimicry</string>
    <string name="question_8">8. Who wrote \'Truth and Method\'?</string>
    <string name="edmund_husserl">Edmund Husserl</string>
    <string name="s_ren_kierkegaard">Søren Kierkegaard</string>
    <string name="question_9">9. In which year was published \'Principia philosophiae cartesianae\' (Baruch Spinoza)?</string>
    <string name="_1666">1666</string>
    <string name="_1663">1663</string>
    <string name="question_10">10. Who wrote \'The Psychopathology of Everyday Life\'?</string>
    <string name="sigmund_freud">Sigmund Freud</string>
    <string name="carl_jung">Carl Jung</string>
    <string name="alfred_adler">Alfred Adler</string>
    <string name="carl_rogers">Carl Rogers</string>
    <string name="my_font">sans-serif-medium</string>
    <string name="hans_georg_gadamer">Hans-Georg Gadamer</string>
    <string name="submit">Submit</string>
    <string name="share">Share</string>
    <string name="try_again">try again</string>

</resources>
