<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.anca.filosofiaquiz.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/owl" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_space_1"
            android:text="@string/philosophy_quiz"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/text_size_1"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/question"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/title"
            android:paddingBottom="@dimen/bottom"
            android:text="@string/how_wise_are_you"
            android:textAlignment="center"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/text_size_2" />

        <EditText
            android:id="@+id/name_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_centerHorizontal="true"
            android:hint="@string/type_your_name_here"
            android:imeOptions="actionSend"
            android:inputType="textCapWords"
            android:paddingTop="@dimen/my_padding"
            android:textAlignment="center"
            android:textColorHint="@color/white" />

        <Button
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name_field"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_top"
            android:background="@color/blue"
            android:padding="@dimen/my_padding_2"
            android:paddingLeft="@dimen/left_right"
            android:paddingRight="@dimen/left_right"
            android:text="@string/let_s_go"
            android:textSize="@dimen/text_size_3"
            android:textStyle="bold" />

    </RelativeLayout>
</ScrollView>
